microservices/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
  namespace: default
spec:
  selector:
    app: microservice
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
