microservices/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-name
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
