microservices/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
      - host: poker.local
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: poker
                  port:
                    number: 80
